Fix jar scanner logic